# freelancer-toolbox

./: .envrc  .envrc.local-template  .gitignore  README.md  ecbx.nix  flake.nix  harvest-exporter.nix  harvest-rounder.nix  pyproject.toml  quipu-invoicer.nix  setup.cfg  sevdesk-invoicer.nix  shell.nix  wise-exporter.nix
.github/workflows/: auto-merge.yaml
docs/: getting-started.md
docs/countries/: README.md  estonia.md  germany.md  spain.md  switzerland.md  uk.md
docs/workflows/: monthly-invoicing.md  tax-preparation.md
ecbx/: cli.py  constants.py  ecb_exchange.py  ecbx.py  pyproject.toml  store.py  utils.py
ecbx/tests/: __init__.py  conftest.py  test_cli.py  test_exchange_rate_store.py  test_utils.py
harvest/: __init__.py
harvest_exporter/: README.md  cli.py
harvest_rounder/: __init__.py  cli.py
kimai/: jsonserializer.py
kimai_exporter/: README.md  cli.py
nix/: devshell.nix  formatter.nix  treefmt.nix
nix/checks/: formatting.nix
paperless-cli/: README.md  default.nix  pyproject.toml
paperless-cli/paperless_cli/: api.py
paperless-cli/paperless_cli/cli/: documents.py  mail_accounts.py  main.py  tags.py
paperless-cli/paperless_cli/models/: mail.py  tag.py
quipu/: pyproject.toml
quipu/quipu_api/: __init__.py
sevdesk-api/: README.md  default.nix  pyproject.toml
sevdesk-api/sevdesk_api/: __init__.py  accounting_types.py  api.py  client.py  transactions.py  vouchers.py
sevdesk-api/sevdesk_api/models/: check_account.py  invoice.py
sevdesk-cli/: .envrc  README.md  default.nix  pyproject.toml
sevdesk-cli/sevdesk_cli/: __init__.py  errors.py  main.py
sevdesk-cli/sevdesk_cli/cli/: accounting_types.py  check_accounts.py  tax_rules.py  transactions.py  vouchers.py
sevdesk-invoicer/: README.md  pyproject.toml
sevdesk-invoicer/sevdesk_api/: __init__.py  api.py  check_accounts.py  client.py  contacts.py  invoices.py  models.py  object_resolver.py  transactions.py  vouchers.py
sevdesk-invoicer/sevdesk_api/models/: __init__.py  base.py  check_account.py  contact.py  invoice.py
sevdesk-invoicer/sevdesk_invoicer/: __init__.py
sevdesk-invoicer/sevdesk_wise_importer/: __init__.py
wise-exporter/: pyproject.toml
wise-exporter/jose_cli/: README.md  bun.lockb  index.ts  package.json
wise-exporter/wise_exporter/: __init__.py
