[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ecbxrate"
version = "0.3.0"
description = "Fetch exchange rate data from the European Central Bank"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aldo Borrero", email = "aldo@aldoborrero.com" }]
license = { text = "MIT" }
keywords = ["exchange", "rates", "currency", "finance", "ecb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ecbxrate"
Documentation = "https://github.com/yourusername/ecbxrate#readme"
Issues = "https://github.com/yourusername/ecbxrate/issues"
Changelog = "https://github.com/yourusername/ecbxrate/blob/main/CHANGELOG.md"

[project.scripts]
ecbxrate = "ecbx:cli"

[tool.setuptools]
py-modules = ["ecbxrate"]

[tool.setuptools.package-data]
ecbxrate = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
