[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ecbx"
version = "0.1.0"
description = "Fetch exchange rate data from the European Central Bank"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aldo Borrero", email = "aldo@aldoborrero.com" }]
license = { text = "MIT" }
keywords = ["exchange", "rates", "currency", "finance", "ecb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
    "click",
    "rich",
]

[project.urls]
Homepage = "https://github.com/numtide/harvest-invoice-calculator"
Documentation = "https://github.com/numtide/harvest-invoice-calculator/tree/main/ecbx#readme"
Issues = "https://github.com/numtide/harvest-invoice-calculator/issues"
Changelog = "https://github.com/numtide/harvest-invoice-calculator/blob/main/ecbx/CHANGELOG.md"

[project.scripts]
ecbx = "ecbx.cli:main"

[tool.setuptools]
packages = ["ecbx"]

[tool.setuptools.package-data]
ecbx = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py312"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=ecbx --cov-report=term-missing"
