[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sevdesk-api"
version = "0.1.0"
description = "Python client for the sevDesk API"
authors = [{name = "Freelancer Toolbox Team"}]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["ALL"]

[tool.black]
line-length = 88
target-version = ["py313"]