[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sevdesk-api"
version = "0.1.0"
description = "Python client for the sevDesk API"
authors = [{name = "Freelancer Toolbox Team"}]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link for TODO
    "FIX002", # Line contains TODO
    "PLR0913", # Too many arguments in function definition
]

[tool.black]
line-length = 88
target-version = ["py313"]
